--- a/client/src/components/create-profile/createprofile.module.css
+++ b/client/src/components/create-profile/createprofile.module.css
@@ -1,6 +1,14 @@
 .createprofile {
   padding: 30px 0;
+}
+
+.createprofile h1,
+h6 {
   text-align: center;
+}
+
+.createprofile button {
+  margin: 10px 0 0 0;
 }
 
 .container {
