--- a/client/src/components/dashboard/dashboard.module.css
+++ b/client/src/components/dashboard/dashboard.module.css
@@ -7,3 +7,21 @@
   color: #6c757d;
   font-weight: 300;
 }
+
+.profilea:hover {
+  text-decoration: underline;
+}
+
+.profileactions {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.profileactions button {
+  background-color: #f8f9fa;
+}
+
+.profileactions svg {
+  margin-right: 0.25rem;
+  color: rgb(52, 58, 64);
+}
